@@ -5,10 +5,13 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.dto.request.contract.ActivateContractRequest;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.dto.request.contract.CreateContractRequest;
+import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.dto.request.contract.UpdateContractRequest;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.dto.response.contract.ContractDto;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.dto.response.custom.BaseResponse;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.dto.response.custom.StoredContractResult;
+import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.dto.response.custom.StoredFile;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.entities.*;
+import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.enums.AccountRole;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.enums.ContractSignMethod;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.enums.ContractStatus;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.enums.OrderStatus;
@@ -16,6 +19,7 @@ import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.exception.CustomBusi
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.repositories.ContractRepository;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.repositories.SaleOrderRepository;
 import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.services.file.FileService;
+import com.swp391.evmarketplace.SWP391_Fall25_Evmarketplace.utils.AuthUtil;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Expression;
@@ -36,6 +40,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import javax.management.relation.Role;
 import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
@@ -51,11 +56,8 @@ public class ContractServiceImpl implements ContractService {
     private final FileService fileService;
     private final SaleOrderRepository saleOrderRepository;
     private final ObjectMapper objectMapper;
+    private final AuthUtil authUtil;
 
-    private static final Set<String> ALLOWED_SORT = Set.of(
-            "createdAt", "signedAt", "effectiveFrom", "effectiveTo", "status", "signMethod",
-            "orderNo", "orderCode", "listingTitle", "buyerName", "sellerName", "branchName"
-    );
 
     @Transactional(readOnly = true)
     @Override
@@ -76,38 +78,53 @@ public class ContractServiceImpl implements ContractService {
             String sort,
             String dir,
             int page,
-            int size
+            int size,
+            String orderNo,
+            Boolean orderNoLike
     ) {
+        Set<String> ALLOWED_SORT = Set.of(
+                "createdAt", "signedAt", "effectiveFrom", "effectiveTo", "status", "signMethod",
+                "orderNo", "orderCode", "listingTitle", "buyerName", "sellerName", "branchName"
+        );
 
-        q = (q == null) ? null : q.trim();
+        q = (q == null || q.isBlank()) ? null : q.trim();
+        orderNo = (orderNo == null || orderNo.isBlank()) ? null : orderNo.trim();
+
         page = Math.max(0, page);
         size = Math.max(1, Math.min(size, 100));
 
         if (createdFrom != null && createdTo != null && createdFrom.isAfter(createdTo)) {
-            LocalDateTime tmp = createdFrom; createdFrom = createdTo; createdTo = tmp;
+            var tmp = createdFrom; createdFrom = createdTo; createdTo = tmp;
         }
         if (signedFrom != null && signedTo != null && signedFrom.isAfter(signedTo)) {
-            LocalDateTime tmp = signedFrom; signedFrom = signedTo; signedTo = tmp;
+            var tmp = signedFrom; signedFrom = signedTo; signedTo = tmp;
         }
         if (effectiveFrom != null && effectiveTo != null && effectiveFrom.isAfter(effectiveTo)) {
-            LocalDateTime tmp = effectiveFrom; effectiveFrom = effectiveTo; effectiveTo = tmp;
+            var tmp = effectiveFrom; effectiveFrom = effectiveTo; effectiveTo = tmp;
         }
 
         String sortField = (sort == null || !ALLOWED_SORT.contains(sort)) ? "createdAt" : sort;
         Sort.Direction direction = "asc".equalsIgnoreCase(dir) ? Sort.Direction.ASC : Sort.Direction.DESC;
-
         Sort mappedSort = mapSort(sortField, direction);
-        Pageable pageable = PageRequest.of(Math.max(0, page), Math.min(Math.max(1, size), 100), mappedSort);
+        Pageable pageable = PageRequest.of(page, size, mappedSort);
 
-        Specification<Contract> spec = buildSpec(
+        // Spec filters chung
+        Specification<Contract> baseSpec = buildSpec(
                 orderId, status, method, branchId, buyerId, sellerId,
-                createdFrom, createdTo, signedFrom, signedTo, effectiveFrom, effectiveTo, q
+                createdFrom, createdTo, signedFrom, signedTo,
+                effectiveFrom, effectiveTo, q, orderNo, Boolean.TRUE.equals(orderNoLike)
         );
 
-        Page<Contract> pageData = contractRepository.findAll(spec, pageable);
+        Account current = authUtil.getCurrentAccountOrNull();
+        Long currentUserId = current != null ? current.getId() : null;
+        AccountRole currentRole = current != null ? current.getRole() : null;
 
+        Specification<Contract> spec = baseSpec.and(roleRestrictionSpec(currentUserId, currentRole));
+
+        Page<Contract> pageData = contractRepository.findAll(spec, pageable);
         List<ContractDto> rows = pageData.getContent().stream()
-                .map(item -> item.toDto(item)).toList();
+                .map(c -> c.toDto(c))
+                .collect(Collectors.toList());
 
         Map<String, Object> payload = new HashMap<>();
         payload.put("items", rows);
@@ -118,27 +135,41 @@ public class ContractServiceImpl implements ContractService {
         payload.put("hasNext", pageData.hasNext());
         payload.put("hasPrevious", pageData.hasPrevious());
 
-        BaseResponse<Object> res = new BaseResponse<>();
-        res.setStatus(200);
-        res.setSuccess(true);
-        res.setMessage("Contracts fetched");
-        res.setData(payload);
-        return res;
+        return new BaseResponse<>(200, true, "Contracts fetched", payload, null, LocalDateTime.now());
     }
 
-    /** Sort map “ảo” → field thực (dùng dot-path của Spring Data) */
+
+    private Specification<Contract> roleRestrictionSpec(Long currentUserId, AccountRole currentRole) {
+        return (root, cq, cb) -> {
+            var jOrder   = root.join("order", JoinType.LEFT);
+            var jListing = jOrder.join("listing", JoinType.LEFT);
+            var jBranch  = jOrder.join("branch", JoinType.LEFT);
+            var jBuyer   = jOrder.join("buyer", JoinType.LEFT);
+
+
+            return switch (currentRole) {
+                case MEMBER -> cb.equal(jBuyer.get("id"), currentUserId);
+                case STAFF  -> cb.equal(jListing.get("responsibleStaff").get("id"), currentUserId);
+                case MANAGER-> cb.equal(jBranch.get("manager").get("id"), currentUserId);
+                case ADMIN -> cb.conjunction();
+                case MODERATOR -> throw new CustomBusinessException("Moderator is not allowed to access this role");
+                default     -> throw new CustomBusinessException("Role is not allowed to access feature");
+            };
+        };
+    }
+
     private Sort mapSort(String sortField, Sort.Direction dir) {
         if (Set.of("createdAt", "signedAt", "effectiveFrom", "effectiveTo", "status", "signMethod").contains(sortField)) {
             return Sort.by(dir, sortField);
         }
         return switch (sortField) {
-            case "orderNo" -> Sort.by(dir, "order.orderNo");
-            case "orderCode" -> Sort.by(dir, "order.orderCode");
+            case "orderNo"      -> Sort.by(dir, "order.orderNo");
+            case "orderCode"    -> Sort.by(dir, "order.orderCode");
             case "listingTitle" -> Sort.by(dir, "order.listing.title");
-            case "buyerName" -> Sort.by(dir, "order.buyer.profile.fullName");
-            case "sellerName" -> Sort.by(dir, "order.seller.profile.fullName");
-            case "branchName" -> Sort.by(dir, "order.branch.name");
-            default -> Sort.by(dir, "createdAt");
+            case "buyerName"    -> Sort.by(dir, "order.buyer.profile.fullName");
+            case "sellerName"   -> Sort.by(dir, "order.seller.profile.fullName");
+            case "branchName"   -> Sort.by(dir, "order.branch.name");
+            default             -> Sort.by(dir, "createdAt");
         };
     }
 
@@ -155,40 +186,51 @@ public class ContractServiceImpl implements ContractService {
             LocalDateTime signedTo,
             LocalDateTime effectiveFrom,
             LocalDateTime effectiveTo,
-            String q
+            String q,
+            String orderNo,
+            boolean orderNoLike
     ) {
-        return (Root<Contract> root, CriteriaQuery<?> cq, CriteriaBuilder cb) -> {
+        return (root, cq, cb) -> {
+            // Join các bảng cần thiết
+            var jOrder         = root.join("order", JoinType.LEFT);
+            var jListing       = jOrder.join("listing", JoinType.LEFT);
+            var jBuyer         = jOrder.join("buyer", JoinType.LEFT);
+            var jBuyerProfile  = jBuyer.join("profile", JoinType.LEFT);
+            var jSeller        = jOrder.join("seller", JoinType.LEFT);
+            var jSellerProfile = jSeller.join("profile", JoinType.LEFT);
+            var jBranch        = jOrder.join("branch", JoinType.LEFT);
 
-            Join<Contract, SaleOrder> jOrder = root.join("order", JoinType.LEFT);
-            Join<SaleOrder, Listing> jListing = jOrder.join("listing", JoinType.LEFT);
-            Join<SaleOrder, Account> jBuyer = jOrder.join("buyer", JoinType.LEFT);
-            Join<SaleOrder, Profile> jBuyerProfile = jBuyer.join("profile", JoinType.LEFT);
-            Join<SaleOrder, Account> jSeller = jOrder.join("seller", JoinType.LEFT);
-            Join<SaleOrder, Profile> jSellerProfile = jSeller.join("profile", JoinType.LEFT);
-            Join<SaleOrder, Branch> jBranch = jOrder.join("branch", JoinType.LEFT);
+            List<jakarta.persistence.criteria.Predicate> ps = new ArrayList<>();
 
-            List<Predicate> predicates = new ArrayList<>();
+            if (orderId != null) ps.add(cb.equal(jOrder.get("id"), orderId));
+            if (status != null) ps.add(cb.equal(root.get("status"), status));
+            if (method != null) ps.add(cb.equal(root.get("signMethod"), method));
+            if (branchId != null) ps.add(cb.equal(jBranch.get("id"), branchId));
+            if (buyerId != null) ps.add(cb.equal(jBuyer.get("id"), buyerId));
+            if (sellerId != null) ps.add(cb.equal(jSeller.get("id"), sellerId));
 
-            if (orderId != null) predicates.add(cb.equal(jOrder.get("id"), orderId));
-            if (status != null) predicates.add(cb.equal(root.get("status"), status));
-            if (method != null) predicates.add(cb.equal(root.get("signMethod"), method));
-            if (branchId != null) predicates.add(cb.equal(jBranch.get("id"), branchId));
-            if (buyerId != null) predicates.add(cb.equal(jBuyer.get("id"), buyerId));
-            if (sellerId != null) predicates.add(cb.equal(jSeller.get("id"), sellerId));
+            if (createdFrom != null)  ps.add(cb.greaterThanOrEqualTo(root.get("createdAt"), createdFrom));
+            if (createdTo != null)    ps.add(cb.lessThanOrEqualTo(root.get("createdAt"), createdTo));
+            if (signedFrom != null)   ps.add(cb.greaterThanOrEqualTo(root.get("signedAt"), signedFrom));
+            if (signedTo != null)     ps.add(cb.lessThanOrEqualTo(root.get("signedAt"), signedTo));
+            if (effectiveFrom != null) ps.add(cb.greaterThanOrEqualTo(root.get("effectiveFrom"), effectiveFrom));
+            if (effectiveTo != null)   ps.add(cb.lessThanOrEqualTo(root.get("effectiveTo"), effectiveTo));
 
-            if (createdFrom != null) predicates.add(cb.greaterThanOrEqualTo(root.get("createdAt"), createdFrom));
-            if (createdTo != null)   predicates.add(cb.lessThanOrEqualTo(root.get("createdAt"), createdTo));
-            if (signedFrom != null)  predicates.add(cb.greaterThanOrEqualTo(root.get("signedAt"), signedFrom));
-            if (signedTo != null)    predicates.add(cb.lessThanOrEqualTo(root.get("signedAt"), signedTo));
-            if (effectiveFrom != null) predicates.add(cb.greaterThanOrEqualTo(root.get("effectiveFrom"), effectiveFrom));
-            if (effectiveTo != null)   predicates.add(cb.lessThanOrEqualTo(root.get("effectiveTo"), effectiveTo));
+            // orderNo (ưu tiên trước q)
+            if (orderNo != null) {
+                if (orderNoLike) {
+                    ps.add(cb.like(cb.lower(jOrder.get("orderNo")), "%" + orderNo.toLowerCase() + "%"));
+                } else {
+                    ps.add(cb.equal(cb.lower(jOrder.get("orderNo")), orderNo.toLowerCase()));
+                }
+            }
 
-            if (q != null && !q.isBlank()) {
-                String like = "%" + q.trim().toLowerCase() + "%";
-
+            // q full-text nhẹ
+            if (q != null) {
+                String like = "%" + q.toLowerCase() + "%";
                 Expression<String> orderCodeStr = cb.toString(jOrder.get("orderCode"));
 
-                Predicate pQ = cb.or(
+                ps.add(cb.or(
                         cb.like(cb.lower(jOrder.get("orderNo")), like),
                         cb.like(cb.lower(orderCodeStr), like),
                         cb.like(cb.lower(jListing.get("title")), like),
@@ -197,13 +239,13 @@ public class ContractServiceImpl implements ContractService {
                         cb.like(cb.lower(jSellerProfile.get("fullName")), like),
                         cb.like(cb.lower(jSeller.get("phoneNumber")), like),
                         cb.like(cb.lower(jBranch.get("name")), like)
-                );
-                predicates.add(pQ);
+                ));
             }
 
-            return cb.and(predicates.toArray(new Predicate[0]));
+            return cb.and(ps.toArray(new jakarta.persistence.criteria.Predicate[0]));
         };
     }
+
 
 
     @Override
@@ -323,6 +365,139 @@ public class ContractServiceImpl implements ContractService {
             return objectMapper.writeValueAsString(arr);
         } catch (Exception e) {
             throw new CustomBusinessException("Cannot append sign_log: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public BaseResponse<?> updateContract(Long id, UpdateContractRequest req, MultipartFile contractFile, HttpServletRequest http) {
+        var contract = contractRepository.findById(id).orElseThrow(() -> new CustomBusinessException("Contract not found"));
+
+        enforceEditPermission(authUtil.getCurrentAccountOrNull(), contract);
+
+        if(contract.getStatus() == ContractStatus.ACTIVE
+                || contract.getStatus() == ContractStatus.SIGNED
+                || contract.getStatus() == ContractStatus.EXPIRED
+                || contract.getStatus() == ContractStatus.CANCELLED
+        ) {
+            throw new CustomBusinessException("Contract cannot be updated");
+        }
+
+        boolean changed = false;
+
+        //Change contract file
+        if(contractFile != null && !contractFile.isEmpty()){
+            final StoredContractResult up;
+            try{
+                up = fileService.storedContract(contractFile);
+            } catch (Exception e) {
+                throw new CustomBusinessException("Error while uploading file: " + e.getMessage());
+            }
+            String oldFileName = contract.getFileUrl();
+            contract.setFileUrl(up.getFileName());
+            changed = true;
+
+            appendEvent(contract, "FILE_REPLACED", authUtil.getCurrentAccount().getId(), http, Map.of(
+                    "old", Objects.toString(oldFileName, ""),
+                    "new", up.getFileName(),
+                    "sha256", up.getSha256(),
+                    "size", up.getSizeBytes()
+            ));
+        }
+
+
+        LocalDateTime newFrom = req.getEffectiveFrom();
+        LocalDateTime newTo   = req.getEffectiveTo();
+
+        LocalDateTime effFromAfter = (newFrom != null) ? newFrom : contract.getEffectiveFrom();
+        LocalDateTime effToAfter   = (newTo   != null) ? newTo   : contract.getEffectiveTo();
+        if (effFromAfter != null && effToAfter != null && effToAfter.isBefore(effFromAfter)) {
+            throw new CustomBusinessException("effectiveTo must be after or equal to effectiveFrom");
+        }
+
+
+        if (newFrom != null && !Objects.equals(newFrom, contract.getEffectiveFrom())) {
+            contract.setEffectiveFrom(newFrom);
+            changed = true;
+        }
+        if (newTo != null && !Objects.equals(newTo, contract.getEffectiveTo())) {
+            contract.setEffectiveTo(newTo);
+            changed = true;
+        }
+
+        // 6) Ghi chú note (nếu có) -> vẫn append event dù metadata không đổi
+        if (req.getNote() != null && !req.getNote().isBlank()) {
+            appendEvent(contract, "META_UPDATED", authUtil.getCurrentAccount().getId(), http, Map.of(
+                    "note", req.getNote(),
+                    "signMethod", Objects.toString(contract.getSignMethod(), null),
+                    "effectiveFrom", Objects.toString(contract.getEffectiveFrom(), null),
+                    "effectiveTo", Objects.toString(contract.getEffectiveTo(), null)
+            ));
+        }
+
+        if (!changed && (req.getNote() == null || req.getNote().isBlank())) {
+            return new BaseResponse<>(
+                    200, true, "Nothing changed", contract.toDto(contract), null, LocalDateTime.now()
+            );
+        }
+
+        contractRepository.saveAndFlush(contract);
+        return new BaseResponse<>(
+                200, true, "Contract updated", contract.toDto(contract), null, LocalDateTime.now()
+        );
+
+    }
+
+    private void appendEvent(Contract c, String type, Long actorId, HttpServletRequest http, Map<String, Object> extra) {
+        ObjectNode evt = objectMapper.createObjectNode();
+        evt.put("type", type);
+        evt.put("at", OffsetDateTime.now(ZoneOffset.ofHours(7)).toString());
+        if (actorId != null) evt.put("actor_id", actorId);
+
+        ObjectNode client = objectMapper.createObjectNode();
+        client.put("ip", String.valueOf(http.getRemoteAddr()));
+        client.put("ua", String.valueOf(http.getHeader("User-Agent")));
+        evt.set("client", client);
+
+        if (extra != null && !extra.isEmpty()) {
+            ObjectNode data = objectMapper.createObjectNode();
+            extra.forEach((k, v) -> {
+                if (v == null) {
+                    data.putNull(k);
+                } else if (v instanceof Number n) {
+                    data.put(k, n.longValue());
+                } else {
+                    data.put(k, v.toString());
+                }
+            });
+            evt.set("data", data);
+        }
+
+        c.setSignLog(appendSignEvent(c.getSignLog(), evt));
+    }
+
+
+    private void enforceEditPermission(Account current, Contract contract) {
+        AccountRole role = current.getRole();
+        SaleOrder order = contract.getOrder();
+
+        switch (role) {
+            case ADMIN -> {}
+            case MANAGER -> {
+                if
+                (order.getBranch() == null || order.getBranch().getManager() == null
+                        || !Objects.equals(order.getBranch().getManager().getId(), current.getId())
+                )
+                {
+                   throw new CustomBusinessException("Forbidden: manager scope mismatch");
+                }
+            }
+            case STAFF -> {
+                if (order.getListing() == null || order.getListing().getResponsibleStaff() == null
+                        || !Objects.equals(order.getListing().getResponsibleStaff().getId(), current.getId())) {
+                    throw new CustomBusinessException("Forbidden: staff scope mismatch");
+                }
+            }
+            default -> throw new CustomBusinessException("Forbidden: role mismatch");
         }
     }
 
